# narwhal

consensus/: Cargo.toml
executor/: Cargo.toml
network/: Cargo.toml
node/: Cargo.toml
node/src/: lib.rs
primary/: Cargo.toml
primary/src/: block_remover.rs  primary.rs
primary/tests/: integration_tests_configuration_api.rs  integration_tests_proposer_api.rs  integration_tests_validator_api.rs
test_utils/: Cargo.toml
types/: Cargo.toml
worker/: Cargo.toml
workspace-hack/: Cargo.toml
