[package]
name = "network"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
async-trait = "0.1.56"
bytes = "1.1.0"
futures = "0.3.21"
rand = { version = "0.7.3", features = ["small_rng"] }
thiserror = "1.0.31"
tokio = { version = "1.19.2", features = ["rt", "net", "sync", "macros", "time"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tracing = "0.1.34"
types = { path = "../types" }
crypto = { path = "../crypto" }
tonic = { version = "0.7.2", features = ["tls"] }
backoff = { version = "0.4.0", features = ["tokio"] }
multiaddr = "0.14.0"

mysten-network = { git = "https://github.com/bmwill/mysten-infra.git", rev = "52b97c56bed64535cda99b8d21a802e1e7c5a67f" }
workspace-hack = { version = "0.1", path = "../workspace-hack" }

[dev-dependencies]
bincode = "1.3.3"
test_utils = { path = "../test_utils" }
