[package]
name = "worker"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1.53"
bincode = "1.3.3"
blake2 = "0.9"
bytes = "1.1.0"
ed25519-dalek = "1.0.1"
futures = "0.3.21"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
tracing = "0.1.34"
tonic = "0.7"
tokio-stream = "0.1.8"
tower = "0.4.12"
multiaddr = "0.14.0"

config = { path = "../config" }
crypto = { path = "../crypto" }
network = { path = "../network" }
primary = { path = "../primary" }
types = { path = "../types" }

store = { git = "https://github.com/bmwill/mysten-infra.git", package = "typed-store", rev = "52b97c56bed64535cda99b8d21a802e1e7c5a67f" }
mysten-network = { git = "https://github.com/bmwill/mysten-infra.git", rev = "52b97c56bed64535cda99b8d21a802e1e7c5a67f" }

[dev-dependencies]
rand = "0.7.3"
tempfile = "3.3.0"
test_utils = { path = "../test_utils" }


[features]
benchmark = []
